--- a/add-movie/index.html
+++ b/add-movie/index.html
@@ -10,6 +10,37 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="../index.html">Home</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="../AllStarWars.html">Star Wars <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav- item active">
+            <a class="nav-link" href="/add-movie/index.html">Add Movie</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Star Wars Movies
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="../episode-i/index.html">Episode 1</a>
+              <a class="dropdown-item" href="../episode-ii/index.html">Episode 2</a>
+              <a class="dropdown-item" href="../episode-iii/index.html">Episode 3</a>
+              <a class="dropdown-item" href="../episode-iv/index.html">Episode 4</a>
+              <a class="dropdown-item" href="../episode-v/index.html">Episode 5</a>
+              <a class="dropdown-item" href="../episode-vi/index.html">Episode 6</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li> 
+        </ul>
+      </div>
+    </nav>
     <div class="container">
       <div class="row">
         <div class="col-md-6">
