--- a/episode-ii/index.html
+++ b/episode-ii/index.html
@@ -3,14 +3,51 @@
 <head>
   <meta charset="UTF-8">
   <title>Episode II: Attack of the Clones - Simple Star Wars Site</title>
-  <link rel="stylesheet" href="/static/css/bootstrap.css">
-  <link rel="stylesheet" href="/static/css/bootstrap-theme.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </head>
 <body>
+   <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="../index.html">Home</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="../AllStarWars.html">Star Wars <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav- item active">
+            <a class="nav-link" href="/add-movie/index.html">Add Movie</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Star Wars Movies
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="../episode-i/index.html">Episode 1</a>
+              <a class="dropdown-item" href="index.html">Episode 2</a>
+              <a class="dropdown-item" href="../episode-iii/index.html">Episode 3</a>
+              <a class="dropdown-item" href="../episode-iv/index.html">Episode 4</a>
+              <a class="dropdown-item" href="../episode-v/index.html">Episode 5</a>
+              <a class="dropdown-item" href="../episode-vi/index.html">Episode 6</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li> 
+        </ul>
+      </div>
+    </nav>
     <script src="/static/js/bootstrap.js"></script>
-  <article>
+  <div class="container">
+    <div class="row">    
+  <div class="col-sm-3">
+    <img class="img-fluid" src="/media/images/starwars_episode_ii.png" alt="Episode II: Attack of the Clones">
+  </div>
+  <div class="col-sm-9">
     <h1>Episode II: Attack of the Clones</h1>
-    <img src="/media/images/starwars_episode_ii.png" alt="Episode II: Attack of the Clones">
     <h2>Opening crawl</h2>
     <blockquote>
       <p>There is unrest in the Galactic Senate. Several thousand solar systems have declared their intentions to leave the Republic.</p>
@@ -18,7 +55,9 @@
       <p>Senator Amidala, the former Queen of Naboo, is returning to the Galactic Senate to vote on the critical issue of creating an ARMY OF THE REPUBLIC to assist the overwhelmed Jedi...</p>
     </blockquote>
     <h2>General information</h2>
-    <table>
+    <div class="row">
+      <div class="col-sm-6">
+    <table class="table ">
       <thead>
         <tr>
           <th>Attribution information</th>
@@ -69,14 +108,14 @@
         </tr>
       </tbody>
     </table>
-    <table>
+    <table class="table-striped">
       <thead>
         <tr>
           <th>Production information</th>
         </tr>
       </thead>
       <tbody>
-        <tr>
+         <tr>
           <td>Distributor</td>
           <td>20th Century Fox</td>
         </tr>
@@ -96,29 +135,32 @@
           <td>Language</td>
           <td>English</td>
         </tr>
+        </tr>
       </tbody>
     </table>
-    <table>
+    <table class="table-hover">
       <thead>
         <tr>
           <th>Chronological information</th>
         </tr>
       </thead>
-      <tbody>
-        <tr>
+       <tr>
           <td>Timeline</td>
           <td>10 years after Star Wars: Episode I The Phantom Menace; 22 years prior to Star Wars: Episode IV A New Hope</td>
         </tr>
         <tr>
           <td>Preceded by</td>
           <td>Episode I The Phantom Menace</td>
-        </tr>
         <tr>
           <td>Followed by</td>
           <td>Episode III Revenge of the Sith</td>
         </tr>
       </tbody>
     </table>
-  </article>
+  </div>
+</div>
+</div>
+</div>
+</div>
 </body>
 </html>
